# powershell-admin-scripts

./: README.md
Dargslan.AclCheck/: Dargslan.AclCheck.psd1  Dargslan.AclCheck.psm1  README.md
Dargslan.AdPasswordAudit/: Dargslan.AdPasswordAudit.psd1  Dargslan.AdPasswordAudit.psm1  README.md
Dargslan.ApacheAnalyzer/: Dargslan.ApacheAnalyzer.psd1  Dargslan.ApacheAnalyzer.psm1  README.md
Dargslan.ApparmorCheck/: Dargslan.ApparmorCheck.psd1  Dargslan.ApparmorCheck.psm1  README.md
Dargslan.AptCheck/: Dargslan.AptCheck.psd1  Dargslan.AptCheck.psm1  README.md
Dargslan.AptHistory/: Dargslan.AptHistory.psd1  Dargslan.AptHistory.psm1  README.md
Dargslan.ArpMonitor/: Dargslan.ArpMonitor.psd1  Dargslan.ArpMonitor.psm1  README.md
Dargslan.AtScheduler/: Dargslan.AtScheduler.psd1  Dargslan.AtScheduler.psm1  README.md
Dargslan.AuditLog/: Dargslan.AuditLog.psd1  Dargslan.AuditLog.psm1  README.md
Dargslan.BackupMonitor/: Dargslan.BackupMonitor.psd1  Dargslan.BackupMonitor.psm1  README.md
Dargslan.BandwidthMonitor/: Dargslan.BandwidthMonitor.psd1  Dargslan.BandwidthMonitor.psm1  README.md
Dargslan.BashAlias/: Dargslan.BashAlias.psd1  Dargslan.BashAlias.psm1  README.md
Dargslan.BondingCheck/: Dargslan.BondingCheck.psd1  Dargslan.BondingCheck.psm1  README.md
Dargslan.BridgeMonitor/: Dargslan.BridgeMonitor.psd1  Dargslan.BridgeMonitor.psm1  README.md
Dargslan.BtrfsCheck/: Dargslan.BtrfsCheck.psd1  Dargslan.BtrfsCheck.psm1  README.md
Dargslan.CertManager/: Dargslan.CertManager.psd1  Dargslan.CertManager.psm1  README.md
Dargslan.CgroupAudit/: Dargslan.CgroupAudit.psd1  Dargslan.CgroupAudit.psm1  README.md
Dargslan.CgroupMonitor/: Dargslan.CgroupMonitor.psd1  Dargslan.CgroupMonitor.psm1  README.md
Dargslan.ContainerAudit/: Dargslan.ContainerAudit.psd1  Dargslan.ContainerAudit.psm1  README.md
Dargslan.CoredumpCheck/: Dargslan.CoredumpCheck.psd1  Dargslan.CoredumpCheck.psm1  README.md
Dargslan.CpuFreq/: Dargslan.CpuFreq.psd1  Dargslan.CpuFreq.psm1  README.md
Dargslan.CronAudit/: Dargslan.CronAudit.psd1  Dargslan.CronAudit.psm1  README.md
Dargslan.CronParser/: Dargslan.CronParser.psd1  Dargslan.CronParser.psm1  README.md
Dargslan.CrontabBackup/: Dargslan.CrontabBackup.psd1  Dargslan.CrontabBackup.psm1  README.md
Dargslan.CryptAudit/: Dargslan.CryptAudit.psd1  Dargslan.CryptAudit.psm1  README.md
Dargslan.DiskBenchmark/: Dargslan.DiskBenchmark.psd1  Dargslan.DiskBenchmark.psm1  README.md
Dargslan.DiskCleaner/: Dargslan.DiskCleaner.psd1  Dargslan.DiskCleaner.psm1  README.md
Dargslan.DiskHealth/: Dargslan.DiskHealth.psd1  Dargslan.DiskHealth.psm1  README.md
Dargslan.DiskQuota/: Dargslan.DiskQuota.psd1  Dargslan.DiskQuota.psm1  README.md
Dargslan.DmesgAnalyzer/: Dargslan.DmesgAnalyzer.psd1  Dargslan.DmesgAnalyzer.psm1  README.md
Dargslan.DnsCheck/: Dargslan.DnsCheck.psd1  Dargslan.DnsCheck.psm1  README.md
Dargslan.DnsResolver/: Dargslan.DnsResolver.psd1  Dargslan.DnsResolver.psm1  README.md
python-windows-tools/dargslan-win-acl-check/: README.md  pyproject.toml
python-windows-tools/dargslan-win-acl-check/dargslan_win_acl_check/: __init__.py  aclcheck.py  cli.py
python-windows-tools/dargslan-win-apache-analyzer/: README.md  pyproject.toml
python-windows-tools/dargslan-win-apache-analyzer/dargslan_win_apache_analyzer/: __init__.py  cli.py  iisanalyzer.py
python-windows-tools/dargslan-win-apparmor-check/: README.md  pyproject.toml
python-windows-tools/dargslan-win-apparmor-check/dargslan_win_apparmor_check/: __init__.py  cli.py  wdaccheck.py
python-windows-tools/dargslan-win-backup-monitor/: README.md  pyproject.toml
python-windows-tools/dargslan-win-backup-monitor/dargslan_win_backup_monitor/: __init__.py  backupmonitor.py  cli.py
python-windows-tools/dargslan-win-bandwidth-monitor/: README.md  pyproject.toml
python-windows-tools/dargslan-win-bandwidth-monitor/dargslan_win_bandwidth_monitor/: __init__.py  bandwidthmonitor.py  cli.py
python-windows-tools/dargslan-win-btrfs-check/: README.md  pyproject.toml
python-windows-tools/dargslan-win-btrfs-check/dargslan_win_btrfs_check/: __init__.py  cli.py  storagespacescheck.py
python-windows-tools/dargslan-win-coredump-check/: README.md  pyproject.toml
python-windows-tools/dargslan-win-coredump-check/dargslan_win_coredump_check/: __init__.py  cli.py  crashdumpcheck.py
python-windows-tools/dargslan-win-cron-audit/: README.md  pyproject.toml
python-windows-tools/dargslan-win-cron-audit/dargslan_win_cron_audit/: __init__.py  cli.py  taskscheduleraudit.py
python-windows-tools/dargslan-win-kernel-check/: README.md  pyproject.toml
python-windows-tools/dargslan-win-kernel-check/dargslan_win_kernel_check/: __init__.py  cli.py  windowsversioncheck.py
python-windows-tools/dargslan-win-net-scanner/: README.md  pyproject.toml
python-windows-tools/dargslan-win-net-scanner/dargslan_win_net_scanner/: __init__.py  cli.py  netscanner.py
python-windows-tools/dargslan-win-nfs-health/: README.md  pyproject.toml
python-windows-tools/dargslan-win-nfs-health/dargslan_win_nfs_health/: __init__.py  cli.py  smbhealth.py
python-windows-tools/dargslan-win-postgres-health/: README.md  pyproject.toml
python-windows-tools/dargslan-win-postgres-health/dargslan_win_postgres_health/: __init__.py  cli.py  postgreshealth.py
python-windows-tools/dargslan-win-selinux-check/: README.md  pyproject.toml
python-windows-tools/dargslan-win-selinux-check/dargslan_win_selinux_check/: __init__.py  cli.py  integritycontrol.py
python-windows-tools/dargslan-win-swap-analyzer/: README.md  pyproject.toml
python-windows-tools/dargslan-win-swap-analyzer/dargslan_win_swap_analyzer/: __init__.py  cli.py  pagefileanalyzer.py
python-windows-tools/dargslan-win-uptime-report/: README.md  pyproject.toml
python-windows-tools/dargslan-win-uptime-report/dargslan_win_uptime_report/: __init__.py  cli.py  uptimereport.py
python-windows-tools/dargslan-win-xfs-check/: README.md  pyproject.toml
python-windows-tools/dargslan-win-xfs-check/dargslan_win_xfs_check/: __init__.py  cli.py  refscheck.py
(+1242 files in other folders)
