[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-win-net-scanner"
version = "1.0.0"
description = "Windows Windows network scanner — ping sweep, port scan, service detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["windows", "sysadmin", "devops", "monitoring", "dargslan"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
Repository = "https://github.com/Dargslan/powershell-admin-scripts"
"Bug Tracker" = "https://github.com/Dargslan/powershell-admin-scripts/issues"
"Free Cheat Sheets" = "https://dargslan.com/cheat-sheets"
"Windows Books" = "https://dargslan.com/books"

[project.scripts]
dargslan-win-net-scanner = "dargslan_win_net_scanner.cli:main"
